<resources>
    <string name="app_name">Social Sharer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //Main
    <string name="menu_profile">Profile</string>
    <string name="menu_qrshare">QR Share</string>
    <string name="menu_mapshare">Map Share</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_requests">Received Requests</string>
    <string name="menu_sent_requests">Sent Requests</string>

    //Login
    <string name="title_activity_login">Sign In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_user_exists">Sorry, this email has already been registered.</string>

    //Registration and Edit Profile
    <string name="title_activity_register">Register</string>
    <string name="confirm_password">Repeat Password</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="full_name">Full Name</string>
    <string name="home_address">Home Address</string>
    <string name="birthdate">Date Of Birth</string>
    <string name="contact_number">Contact Number</string>
    <string name="profession">Profession</string>
    <string name="Introduction">Briefly Introduce Yourself</string>

    //Change Password
    <string name="title_activity_forgot_password">Confirm Email</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="confirm">Confirm</string>

    //Profile
    <string name="profile_details">Profile Details</string>
    <string name="social_networks">Social Network Details</string>
    <string name="title_activity_edit_socials">Edit Social Network Details</string>
    <string name="facebook">Facebook: </string>
    <string name="facebook_link"></string>
    <string name="enter_facebook_link">Enter your Facebook link</string>
    <string name="twitter">Twitter: </string>
    <string name="twitter_link"></string>
    <string name="enter_twitter_link">Enter your Twitter link</string>
    <string name="instagram">Instagram: </string>
    <string name="instagram_link"></string>
    <string name="enter_instagram_link">Enter your Instagram link</string>
    <string name="linkedin">Linkedin: </string>
    <string name="linkedin_link"></string>
    <string name="enter_linkedin_link">Enter your LinkedIn link</string>
    <string name="wechat">Wechat: </string>
    <string name="wechat_link"></string>
    <string name="enter_wechat_link">Enter your Wechat ID</string>
    <string name="save_socials">Save Details</string>

    //QR Share
    <string name="generate_qr">Generate QR Code</string>
    <string name="export_qr">Export QR Code</string>
    <string name="scan_qr">Scan QR Code</string>

    //Contacts
    <string name="search_contacts">Search Contacts</string>
    <string name="empty_contacts">Currently you don\'t have any contacts,
        find some friends using our app!</string>
    <string name="add_contact">Accept</string>
    <string name="delete_contact">Delete</string>
    <string name="contact_activity_back">Back</string>

    //Requests
    <string name="search_requests">Search Requests</string>
    <string name="requests_empty">Currently you don\'t have any requests,
        find some friends using our app!</string>
    <string name="reject">Reject</string>
    <string name="rejected">Rejected</string>

    //Sent requests
    <string name="search_sent_requests">Search For Previous Sent Requests</string>
    <string name="sent_requests_empty">Currently you haven\'t sent any requests,
        find some friends using our app!</string>

    //Setting
    <string name="change_password_button">Change Password</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="logout_button">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
