<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/contact_linearLayout_top"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                app:civ_border_width="3dp"
                app:civ_border_color="#FFFFFFFF"
                tools:src="@drawable/unknown" />

            <TextView
                android:id="@+id/contact_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_profile_image"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/full_name"
                android:textColor="#FFF"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_profile_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_profile_name"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/profession"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#FFF"/>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/contact_linearLayout_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/contact_linearLayout_top"
            android:layout_marginTop="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_details"
                    android:paddingLeft="18dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:text="@string/email"/>
                <TextView
                    android:id="@+id/contact_profile_email"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contact_number"/>
                <TextView
                    android:id="@+id/contact_profile_number"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/contact_number"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/contact_linearLayout_mid"
            android:layout_marginTop="18dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/social_networks"
                    android:paddingLeft="18dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/facebook"/>
                <TextView
                    android:id="@+id/contact_profile_facebook"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/facebook"/>
                <TextView
                    android:id="@+id/contact_profile_facebook_link"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/facebook_link"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/twitter"/>
                <TextView
                    android:id="@+id/contact_profile_twitter"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/twitter"/>
                <TextView
                    android:id="@+id/contact_profile_twitter_link"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/twitter_link"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/instagram"/>
                <TextView
                    android:id="@+id/contact_profile_instagram"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/instagram"/>
                <TextView
                    android:id="@+id/contact_profile_instagram_link"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/instagram_link"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/wechat"/>
                <TextView
                    android:id="@+id/contact_profile_wechat"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/wechat"/>
                <TextView
                    android:id="@+id/contact_profile_wechat_link"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/wechat_link"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/linkedin"/>
                <TextView
                    android:id="@+id/contact_profile_linkedin"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/linkedin"/>
                <TextView
                    android:id="@+id/contact_profile_linkedin_link"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/linkedin_link"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:paddingTop="18dp"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/add_contact_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/add_contact"
                    app:layout_constraintEnd_toStartOf="@+id/delete_contact_button"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/delete_contact_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/delete_contact"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/backButton_contact_activity"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.944" />

                <Button
                    android:id="@+id/backButton_contact_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/contact_activity_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>